--- a/Semana 3/S3LAB1_Microservicios.ipynb
+++ b/Semana 3/S3LAB1_Microservicios.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4  http://paypal.com.confirm-key-21107316126168.s...         1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "4      90             50     0          1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "       0.8155 , 0.81575, 0.806  ])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "                       n_jobs=-1, random_state=1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "['./model_deployment/phishing_clf.pkl']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "0.6473499544150341"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,14 +522,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: flask in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (3.0.3)\n",
+      "Requirement already satisfied: flask in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (3.0.3)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
       "Requirement already satisfied: Werkzeug>=3.0.0 in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from flask) (3.0.2)\n",
       "Requirement already satisfied: Jinja2>=3.1.2 in c:\\users\\arcil\\appdata\\roaming\\python\\python310\\site-packages (from flask) (3.1.2)\n",
       "Requirement already satisfied: itsdangerous>=2.1.2 in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from flask) (2.2.0)\n",
@@ -537,17 +538,13 @@
       "Requirement already satisfied: blinker>=1.6.2 in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from flask) (1.7.0)\n",
       "Requirement already satisfied: colorama in c:\\users\\arcil\\appdata\\roaming\\python\\python310\\site-packages (from click>=8.1.3->flask) (0.4.6)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\arcil\\appdata\\roaming\\python\\python310\\site-packages (from Jinja2>=3.1.2->flask) (2.1.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Collecting flask-restx\n",
-      "  Downloading flask_restx-1.3.0-py2.py3-none-any.whl.metadata (9.3 kB)\n",
-      "Collecting aniso8601>=0.82 (from flask-restx)\n",
-      "  Downloading aniso8601-9.0.1-py2.py3-none-any.whl.metadata (23 kB)\n",
+      "Requirement already satisfied: flask-restx in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (1.3.0)\n",
+      "Requirement already satisfied: aniso8601>=0.82 in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from flask-restx) (9.0.1)\n",
       "Requirement already satisfied: jsonschema in c:\\users\\arcil\\appdata\\roaming\\python\\python310\\site-packages (from flask-restx) (4.17.3)\n",
       "Requirement already satisfied: Flask!=2.0.0,>=0.8 in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from flask-restx) (3.0.3)\n",
       "Requirement already satisfied: werkzeug!=2.0.0 in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from flask-restx) (3.0.2)\n",
       "Requirement already satisfied: pytz in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from flask-restx) (2023.3.post1)\n",
-      "Collecting importlib-resources (from flask-restx)\n",
-      "  Downloading importlib_resources-6.4.0-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Requirement already satisfied: importlib-resources in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from flask-restx) (6.4.0)\n",
       "Requirement already satisfied: Jinja2>=3.1.2 in c:\\users\\arcil\\appdata\\roaming\\python\\python310\\site-packages (from Flask!=2.0.0,>=0.8->flask-restx) (3.1.2)\n",
       "Requirement already satisfied: itsdangerous>=2.1.2 in c:\\users\\arcil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from Flask!=2.0.0,>=0.8->flask-restx) (2.2.0)\n",
       "Requirement already satisfied: click>=8.1.3 in c:\\users\\arcil\\appdata\\roaming\\python\\python310\\site-packages (from Flask!=2.0.0,>=0.8->flask-restx) (8.1.3)\n",
@@ -556,27 +553,6 @@
       "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\arcil\\appdata\\roaming\\python\\python310\\site-packages (from jsonschema->flask-restx) (23.1.0)\n",
       "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in c:\\users\\arcil\\appdata\\roaming\\python\\python310\\site-packages (from jsonschema->flask-restx) (0.19.3)\n",
       "Requirement already satisfied: colorama in c:\\users\\arcil\\appdata\\roaming\\python\\python310\\site-packages (from click>=8.1.3->Flask!=2.0.0,>=0.8->flask-restx) (0.4.6)\n",
-      "Downloading flask_restx-1.3.0-py2.py3-none-any.whl (2.8 MB)\n",
-      "   ---------------------------------------- 0.0/2.8 MB ? eta -:--:--\n",
-      "    --------------------------------------- 0.0/2.8 MB 1.9 MB/s eta 0:00:02\n",
-      "   - -------------------------------------- 0.1/2.8 MB 1.6 MB/s eta 0:00:02\n",
-      "   -- ------------------------------------- 0.2/2.8 MB 1.6 MB/s eta 0:00:02\n",
-      "   ---- ----------------------------------- 0.3/2.8 MB 1.8 MB/s eta 0:00:02\n",
-      "   ------- -------------------------------- 0.5/2.8 MB 2.6 MB/s eta 0:00:01\n",
-      "   -------- ------------------------------- 0.6/2.8 MB 2.3 MB/s eta 0:00:01\n",
-      "   --------------- ------------------------ 1.1/2.8 MB 3.8 MB/s eta 0:00:01\n",
-      "   ---------------- ----------------------- 1.2/2.8 MB 3.5 MB/s eta 0:00:01\n",
-      "   -------------------- ------------------- 1.5/2.8 MB 4.0 MB/s eta 0:00:01\n",
-      "   ------------------------- -------------- 1.8/2.8 MB 4.0 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 2.5/2.8 MB 5.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  2.8/2.8 MB 5.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.8/2.8 MB 5.0 MB/s eta 0:00:00\n",
-      "Downloading aniso8601-9.0.1-py2.py3-none-any.whl (52 kB)\n",
-      "   ---------------------------------------- 0.0/52.8 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 52.8/52.8 kB 2.7 MB/s eta 0:00:00\n",
-      "Downloading importlib_resources-6.4.0-py3-none-any.whl (38 kB)\n",
-      "Installing collected packages: aniso8601, importlib-resources, flask-restx\n",
-      "Successfully installed aniso8601-9.0.1 flask-restx-1.3.0 importlib-resources-6.4.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -591,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -663,60 +639,21 @@
       " * Running on all addresses (0.0.0.0)\n",
       " * Running on http://127.0.0.1:5000\n",
       " * Running on http://192.168.1.20:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [17/Apr/2024 18:09:37] \"GET /predict/?URL= HTTP/1.1\" 500 -\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 1498, in __call__\n",
-      "    return self.wsgi_app(environ, start_response)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 1476, in wsgi_app\n",
-      "    response = self.handle_exception(e)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask_restx\\api.py\", line 671, in error_router\n",
-      "    return original_handler(f)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask_restx\\api.py\", line 669, in error_router\n",
-      "    return self.handle_error(e)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 1473, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 882, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask_restx\\api.py\", line 671, in error_router\n",
-      "    return original_handler(f)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask_restx\\api.py\", line 669, in error_router\n",
-      "    return self.handle_error(e)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 880, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 865, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask_restx\\api.py\", line 402, in wrapper\n",
-      "    resp = resource(*args, **kwargs)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\views.py\", line 110, in view\n",
-      "    return current_app.ensure_sync(self.dispatch_request)(**kwargs)  # type: ignore[no-any-return]\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask_restx\\resource.py\", line 41, in dispatch_request\n",
-      "    resp = meth(*args, **kwargs)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask_restx\\marshalling.py\", line 244, in wrapper\n",
-      "    resp = f(*args, **kwargs)\n",
-      "  File \"C:\\Users\\arcil\\AppData\\Local\\Temp\\ipykernel_11524\\2214214049.py\", line 11, in get\n",
-      "    \"result\": predict_proba(args['URL'])\n",
-      "  File \"c:\\Users\\arcil\\Documents\\GitHub\\MIAD_NLP_2024\\model_deployment\\m09_model_deployment.py\", line 20, in predict_proba\n",
-      "    domain = url_.url.str.split('/', expand=True).iloc[:, 2]\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexing.py\", line 1147, in __getitem__\n",
-      "    return self._getitem_tuple(key)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexing.py\", line 1652, in _getitem_tuple\n",
-      "    tup = self._validate_tuple_indexer(tup)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexing.py\", line 940, in _validate_tuple_indexer\n",
-      "    self._validate_key(k, i)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexing.py\", line 1554, in _validate_key\n",
-      "    self._validate_integer(key, axis)\n",
-      "  File \"c:\\Users\\arcil\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexing.py\", line 1647, in _validate_integer\n",
-      "    raise IndexError(\"single positional indexer is out-of-bounds\")\n",
-      "IndexError: single positional indexer is out-of-bounds\n",
-      "127.0.0.1 - - [17/Apr/2024 18:09:37] \"GET /predict/?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [17/Apr/2024 18:09:37] \"GET /predict/?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [17/Apr/2024 18:09:37] \"GET /predict/?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [17/Apr/2024 18:09:38] \"GET /predict/?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [17/Apr/2024 18:09:53] \"GET /predict/?URL=http://consultoriojuridico.co/pp/www.paypal.com/ HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [17/Apr/2024 18:09:53] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [17/Apr/2024 18:10:06] \"GET /predict/?URL=http://consultoriojuridico.co/pp/www.paypal.com/ HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [17/Apr/2024 18:10:51] \"GET /predict/?URL=http://consultoriojuridico.co/pp/www.paypal.com/ HTTP/1.1\" 200 -\n"
+      "Press CTRL+C to quit\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [27/Apr/2024 16:06:26] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Apr/2024 16:06:26] \"GET /swaggerui/droid-sans.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Apr/2024 16:06:26] \"GET /swaggerui/swagger-ui.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Apr/2024 16:06:26] \"GET /swaggerui/swagger-ui-bundle.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Apr/2024 16:06:26] \"GET /swaggerui/swagger-ui-standalone-preset.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Apr/2024 16:06:27] \"GET /swagger.json HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Apr/2024 16:06:27] \"GET /swaggerui/favicon-32x32.png HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Apr/2024 16:06:38] \"GET /predict/?URL=https://askubuntu.com/questions/280768/how-to-rename-a-file-in-terminal HTTP/1.1\" 200 -\n"
      ]
     }
    ],
