--- a/Semana 6/S6TC1-Redes_Neuronales.ipynb
+++ b/Semana 6/S6TC1-Redes_Neuronales.ipynb
@@ -60,7 +60,7 @@
     "from math import sqrt\n",
     "import time\n",
     "import keras\n",
-    "from keras.callbacks import History\n"
+    "from keras.callbacks import History"
    ]
   },
   {
